Add: styling for list item

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
+
+$primary-color: #fcd20d;
+$secondary-color: #df0111;
+
+$background-color: #fdf6f4;
+$background-white-color: #fefaf8;
+$icon-background-color: #E9DCD5;
+$white: #ffffff;
+
+$text-color: #393941;
+
+$font: 'Open Sans', sans-serif;
+
+body {
+  margin: 0;
+}
