--- a/src/app/components/list-item/list-item.component.scss
+++ b/src/app/components/list-item/list-item.component.scss
@@ -8,13 +8,21 @@
   max-height: 77px;
   color: $text-color;
   font-family: $font;
+  margin-bottom: 18px;
+
+
+  &-wrapper{
+    display: grid;
+    grid-template-columns: 85% 15%;
+  }
 
   &-label {
     display: grid;
     align-items: center;
-    grid-template-columns: 15% 70% 15%;
+    grid-template-columns: 15% 85%;
     height: 100%;
     cursor: pointer;
+    width: 100%;
 
     &__checkbox {
       height: 27px;
@@ -65,24 +73,25 @@
       font-weight: 800;
       font-size: 12px;
     }
+  }
+  &-edit {
+    background-color: #E9DCD5;
+    border-radius: 50%;
+    height: 28px;
+    width: 28px;
+    border: none;
+    display: grid;
+    place-content: center;
+    place-self: center;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+  }
 
-    &__edit {
-      background-color: #E9DCD5;
-      border-radius: 50%;
-      height: 28px;
-      width: 28px;
-      border: none;
-      display: grid;
-      place-content: center;
-      place-self: center;
-      cursor: pointer;
-    }
-
-    &__input {
-      border-radius: 12px;
-      outline: none;
-      border: 1px solid $icon-background-color;
-      padding: 4px 14px;
-    }
+  &-input {
+    border-radius: 12px;
+    outline: none;
+    border: 1px solid $icon-background-color;
+    padding: 4px 14px;
   }
 }
