--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,10 +1,14 @@
+<div class="header">
+  <div class="products">
+    Productos<span> ({{items.length}})</span>
+  </div>
+  <div class="total">
+    <span class="total-text">Total: </span> <span class="total-amount">${{total}} mxn</span>
+  </div>
+</div>
 <div class="list-wrapper">
   <ng-container *ngFor="let item of items">
     <app-list-item *ngIf="item.name" [item]="item" (refresh)="refresh()"></app-list-item>
   </ng-container>
 </div>
 
-
-<div class="total">
-  Total: {{total}}
-</div>
