--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -1,7 +1,30 @@
+@import './../../../styles';
+.header {
+  padding: 20px 26px;
+  display: flex;
+  justify-content: space-between;
+
+  .products {
+    span {
+      font-weight: bold;
+    }
+  }
+
+  .total {
+    &-text {
+      font-size: 16px;
+    }
+    &-amount {
+      font-weight: 800;
+      color: $secondary-color;
+    }
+  }
+}
+
 .list-wrapper {
   display: flex;
   flex-direction: column;
   margin: 0;
-  gap: 18px;
+  // gap: 18px;
   padding: 29px 26px;
 }
