Fix: updateCost method

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="products">
-    Productos<span> ({{items.length}})</span>
+    Productos<span> ({{itemsLength}})</span>
   </div>
   <div class="total">
     <span class="total-text">Total: </span> <span class="total-amount">${{total}} mxn</span>
