--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -3,7 +3,7 @@
     Productos<span> ({{itemsLength}})</span>
   </div>
   <div class="total">
-    <span class="total-text">Total: </span> <span class="total-amount">${{total}} mxn</span>
+    <span class="total-text">Total: </span> <span class="total-amount">{{total | currency}} mxn</span>
   </div>
 </div>
 <div class="list-wrapper">
