add: new backend

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="list-wrapper">
   <ng-container *ngFor="let item of items">
-    <app-list-item *ngIf="item.name" [item]="item" (refresh)="refresh()"></app-list-item>
+    <app-list-item *ngIf="item.Nombre" [item]="item" (refresh)="refresh()"></app-list-item>
   </ng-container>
 </div>
 
