--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,15 +1,15 @@
-<div class="item" *ngIf="item.need_to_buy !== '0'">
+<div class="item" *ngIf="item.Necesitamos !== ''">
  <div class="item-wrapper">
   <label class="item-label">
-    <input class="item-label__checkbox" type="checkbox" [id]="item.name" [checked]="checked" (change)="check($event)">
+    <input class="item-label__checkbox" type="checkbox" [id]="item.Nombre" [checked]="checked" (change)="check($event)">
     <div class="item-label__info">
       <div class="info-top">
-        <div class="name">{{item.name}}</div>
+        <div class="name">{{item.Nombre}}</div>
         <div class="bar"></div>
-        <div class="need_to_buy">{{item.need_to_buy}}</div>
-        <div class="measure">{{item.measure}}</div>
+        <div class="need_to_buy">{{item.Necesitamos}}</div>
+        <div class="measure">{{item.Medida}}</div>
       </div>
-      <div class="item-label__cost" *ngIf="!this.isEditting && item.cost">{{item.cost| currency}} mxn</div>
+      <div class="item-label__cost" *ngIf="!this.isEditting && item.Costo">{{item.Costo| currency}} mxn</div>
     </div>
   </label>
   <button class="item-edit" *ngIf="!this.isEditting" (click)="editCost()">
@@ -18,7 +18,7 @@
     <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(16,16)"><path d="M12.527,7.473l-4,-4l-7.527,7.527v4h4z"></path><path d="M11.172,0.828l-1.065,1.065l4,4l1.065,-1.065c1.105,-1.105 1.105,-2.895 0,-4v0c-1.105,-1.104 -2.896,-1.104 -4,0z"></path></g></g>
     </svg>
   </button>
-  <input class="item-input" [value]="item.cost" *ngIf="this.isEditting" (keydown.enter)="updateCost($event)">
+  <input class="item-input" [value]="item.Costo" *ngIf="this.isEditting" (keydown.enter)="updateCost($event)">
  </div>
 </div>
 
