--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,4 +1,4 @@
-<div class="item" *ngIf="item.Falta !== '0'">
+<div class="item">
  <div class="item-wrapper">
   <label class="item-label">
     <input class="item-label__checkbox" type="checkbox" [id]="item.Nombre" [checked]="checked" (change)="check($event)">
